--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.1.0",
   "description": "serverless reference implementation",
   "dependencies": {
-    "bungee-lib": "^1.0.2",
+    "bungee-lib": "^1.3.0",
     "dotenv": "^8.2.0",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "serverless": "^2.25.2",
+    "serverless-dotenv-plugin": "^3.7.2"
   },
   "devDependencies": {
     "jest": "^26.6.0",
+    "serverless-domain-manager": "^5.1.0",
     "serverless-offline": "^6.8.0"
   },
   "eslintConfig": {
@@ -19,8 +22,9 @@
     ]
   },
   "scripts": {
-    "node:build": "npm i; npm i -g serverless;",
-    "node:build:clean": "rm -r node_modules; npm install; npm i -g serverless;",
+    "start": "npm run deploy:local",
+    "build": "npm i",
+    "build:clean": "rm -r node_modules; rm -r package-lock.json; npm i",
     "deploy:local": "serverless offline",
     "deploy:stage": "./scripts/staging/deploy.sh",
     "test": "jest --passWithNoTests"
