--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-service: bungee-server
+service: !Join ['-',['bungee',${env:APP_NAME},'server']]
 
 plugins:
   - serverless-offline
@@ -87,139 +87,5 @@ functions:
 
 resources:
   Resources:
-    # ======================================================================================================================
-    # VPC Resources
-    # ======================================================================================================================
-
-    VPC:
-      Type: AWS::EC2::VPC
-      Properties:
-        CidrBlock: !Sub "10.87.0.0/16"
-        EnableDnsSupport: true
-        EnableDnsHostnames: true
-#        Tags:
-#          - Key: foo
-#            Value: bar
-#          - Key: foo2,
-#            Value: bar2
-    InternetGateway:
-      Type: AWS::EC2::InternetGateway
-    InternetGatewayAttachment:
-      Type: AWS::EC2::VPCGatewayAttachment
-      Properties:
-        InternetGatewayId: !Ref InternetGateway
-        VpcId: !Ref VPC
-    PublicSubnetA:
-      Type: AWS::EC2::Subnet
-      Properties:
-        VpcId: !Ref VPC
-        AvailabilityZone: !Select [ 0, !GetAZs '' ]
-        CidrBlock: !Sub "10.87.10.0/24"
-        MapPublicIpOnLaunch: true
-    PublicSubnetB:
-      Type: AWS::EC2::Subnet
-      Properties:
-        VpcId: !Ref VPC
-        AvailabilityZone: !Select [ 1, !GetAZs '' ]
-        CidrBlock: !Sub "10.87.11.0/24"
-        MapPublicIpOnLaunch: true
-    PublicRouteTable:
-      Type: AWS::EC2::RouteTable
-      Properties:
-        VpcId: !Ref VPC
-    DefaultPublicRoute:
-      Type: AWS::EC2::Route
-      DependsOn: InternetGatewayAttachment
-      Properties:
-        RouteTableId: !Ref PublicRouteTable
-        DestinationCidrBlock: 0.0.0.0/0
-        GatewayId: !Ref InternetGateway
-    PublicSubnetRouteTableAssociationA:
-      Type: AWS::EC2::SubnetRouteTableAssociation
-      Properties:
-        RouteTableId: !Ref PublicRouteTable
-        SubnetId: !Ref PublicSubnetA
-    PublicSubnetRouteTableAssociationB:
-      Type: AWS::EC2::SubnetRouteTableAssociation
-      Properties:
-        RouteTableId: !Ref PublicRouteTable
-        SubnetId: !Ref PublicSubnetB
-
-    # ======================================================================================================================
-    # Security Resources
-    # ======================================================================================================================
-
-    DBVpcSecurityGroup:
-      Type: AWS::EC2::SecurityGroup
-      Properties:
-        GroupDescription: Enable TCP access via port 3306
-        GroupName: rds-test-stack-sg
-        SecurityGroupIngress:
-          - IpProtocol: tcp
-            FromPort: '3306'
-            ToPort: '3306'
-            CidrIp: 0.0.0.0/0
-        VpcId: !Ref VPC
-
-    # ======================================================================================================================
-    # DB Resources
-    # ======================================================================================================================
-
-    DBParameterGroup:
-      Type: AWS::RDS::DBParameterGroup
-      Properties:
-        Description: Bungee DB parameter group
-        Family: mysql8.0
-#        Parameters:
-#          innodb_sort_buffer_size: 5242880
-#          sort_buffer_size: 1310720
-    DBInstance:
-      Type: AWS::RDS::DBInstance
-      Properties:
-        AllocatedStorage: 10
-        DBInstanceClass: 'db.m5.xlarge'
-        DBInstanceIdentifier: 'beer-goggles-db-instance'
-        DBName: 'bungee_db'
-        DBParameterGroupName: !Ref DBParameterGroup
-        VPCSecurityGroups:
-          - !Ref DBVpcSecurityGroup
-        DBSubnetGroupName: !Ref DBSubnetGroup
-        Engine: MySQL
-        EngineVersion: 8.0.21
-        AllowMajorVersionUpgrade: true
-        MasterUsername: admin
-        MasterUserPassword: serverless_admin
-        PubliclyAccessible: true
-    DBSubnetGroup:
-      Type: AWS::RDS::DBSubnetGroup
-      Properties:
-        DBSubnetGroupDescription: String
-        DBSubnetGroupName: 'bungee-server-subnet-group'
-        SubnetIds:
-          - !Ref PublicSubnetA
-          - !Ref PublicSubnetB
-
-    # ======================================================================================================================
-    # SNS
-    # ======================================================================================================================
-
-    ImageDeduplicationQueue:
-      Type: AWS::SQS::Queue
-      Properties:
-        ContentBasedDeduplication: True
-        FifoQueue: True
-        QueueName: image-deduplication-queue.fifo
-
-    ImageDeduplicationQueueDeadLetter:
-      Type: AWS::SQS::Queue
-      Properties:
-        ContentBasedDeduplication: True
-        FifoQueue: True
-        QueueName: image-deduplication-queue-dead-letter.fifo
-
-    CategoryHealthCalculationQueue:
-      Type: AWS::SQS::Queue
-      Properties:
-        ContentBasedDeduplication: True
-        FifoQueue: True
-        QueueName: category-health-calculation-queue.fifo
+    ${include(./clourformation/vpc.yml)}
+    ${include(./cloudformation/db.yml)}
