--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bungee-serverless",
+  "name": "bungee-server",
   "version": "1.1.0",
-  "description": "serverless reference implementation",
+  "description": "Bungee Server template project",
   "dependencies": {
     "bungee-lib": "^1.3.0",
     "dotenv": "^8.2.0",
@@ -15,12 +15,6 @@
     "serverless-domain-manager": "^5.1.0",
     "serverless-offline": "^6.8.0"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "scripts": {
     "start": "npm run deploy:local",
     "build": "npm i",
@@ -33,10 +27,10 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/connorh23/bungee-serverless.git"
+    "url": "git+https://github.com/connorh23/bungee-server.git"
   },
   "bugs": {
-    "url": "https://github.com/connorh23/bungee-serverless/issues"
+    "url": "https://github.com/connorh23/bungee-server/issues"
   },
-  "homepage": "https://github.com/connorh23/bungee-serverless#readme"
+  "homepage": "https://github.com/connorh23/bungee-server#readme"
 }
