--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {
     "jest": "^26.6.0",
     "serverless-domain-manager": "^5.1.0",
-    "serverless-offline": "^6.8.0"
+    "serverless-offline": "^6.8.0",
+    "serverless-prune-plugin": "^1.4.3"
   },
   "scripts": {
     "start": "npm run deploy:local",
