--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Bungee Server template project",
   "dependencies": {
-    "bungee-lib": "^1.3.0",
+    "bungee-lib": "2.0.1",
     "dotenv": "^8.2.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.5.0",
